--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -197,7 +197,7 @@ target: buildSkeleton - Build the folders
    <mkdir dir="${target.sdk.path}/dist/vm" />
    <copy todir="${target.sdk.path}/docs/html"> <fileset dir="${sdk.path}/docs/html" /></copy>
    <copy todir="${target.sdk.path}/dist/vm"> <fileset dir="${sdk.path}/dist/vm" includes="*.tcz" /></copy>
-   <copy todir="${target.sdk.path}/dist" file="${sdk.path}/dist/tc.jar" />
+   <copy todir="${target.sdk.path}/dist" file="${sdk.path}/dist/*.jar" />
 </target>
 
 <target name="buildSamples_sdk" >
