--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -52,11 +52,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="1"
+				Optimization="0"
 				InlineFunctionExpansion="2"
 				AdditionalIncludeDirectories="..\..\src\tcvm;..\..\src\util;..\..\src\zlib;..\..\src\axtls;..\..\src\nm"
 				PreprocessorDefinitions="LITTLE_ENDIAN;TOTALCROSS;WIN32;NDEBUG;_WINDOWS;TC_EXPORTS;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="0"
 				StructMemberAlignment="3"
 				EnableFunctionLevelLinking="true"
@@ -681,11 +682,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="1"
+				Optimization="0"
 				InlineFunctionExpansion="2"
 				AdditionalIncludeDirectories="..\..\src\tcvm;..\..\src\util;..\..\src\zlib;..\..\src\axtls;..\..\src\nm"
 				PreprocessorDefinitions="LITTLE_ENDIAN;TOTALCROSS;WIN32;NDEBUG;_WINDOWS;TC_EXPORTS;_CRT_SECURE_NO_WARNINGS;ENABLE_DEMO"
 				StringPooling="true"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="0"
 				StructMemberAlignment="3"
 				EnableFunctionLevelLinking="true"
@@ -1101,11 +1103,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="1"
+				Optimization="0"
 				InlineFunctionExpansion="2"
 				AdditionalIncludeDirectories="..\..\src\tcvm;..\..\src\util;..\..\src\zlib;..\..\src\axtls;..\..\src\nm"
 				PreprocessorDefinitions="LITTLE_ENDIAN;TOTALCROSS;WIN32;NDEBUG;_WINDOWS;TC_EXPORTS;_CRT_SECURE_NO_WARNINGS;DISABLE_RAS"
 				StringPooling="true"
+				BasicRuntimeChecks="3"
 				RuntimeLibrary="0"
 				StructMemberAlignment="3"
 				EnableFunctionLevelLinking="true"
