adds back copy of TCFont.tcz to dist/vm

--- a/TotalCrossSDK/build.gradle
+++ b/TotalCrossSDK/build.gradle
@@ -263,6 +263,7 @@ task dist(dependsOn: build) {
 
 	doLast{
 		copy { 
+			from 'etc/fonts/TCFont.tcz'
 			from 'build/libs/install/win32/TCUI.tcz'
 			from 'build/libs/install/win32/TCBase.tcz'
 			into 'dist/vm/'
