--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -236,7 +236,7 @@ target: javadoc
   <exec dir="${java.home}/bin" executable="javadoc">
     <arg line="-sourcepath ${output}/javadoc"/>
     <arg line="-d ${docs}/html"/>
-    <arg line="-doctitle 'TotalCross SDK ${versionStr}.${buildNumber} (&lt;a href=changelogs.html _target=blank &gt;changelogs&lt;/a&gt;).'"/>
+    <arg line="-doctitle 'TotalCross SDK ${versionStr}.${buildNumber} (&lt;a href='https://gitlab.com/totalcross/TotalCross/blob/master/CHANGELOG.md' _target=blank &gt;changelogs&lt;/a&gt;).'"/>
     <arg line="-source 1.7"/>
     <arg line="-subpackages litebase -subpackages totalcross"/>
   </exec>
@@ -245,11 +245,6 @@ target: javadoc
   <replace dir="${docs}/html/" token="java.lang." value="totalcross.lang."><include name="**/*.html"/></replace>
 
   <delete failonerror="false"><fileset dir="${output}/javadoc"/></delete>
-
-  <copy file="${docs}/changelogs.html" todir="${docs}/html"/>
-
-  <!--replace file="${docs}/html/changelogs.html" token="@@@" value="@@BUILD_NUMBER@@"/-->
-
 </target>
 
 <!--+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
